# RemoteTask

./: Cargo.toml  README.md  config_example.json
src/: config.rs  field_generator.rs  http_client.rs  logger.rs  main.rs  request_handler.rs  stats.rs
