[package]
name = "RemoteTask-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "cookies"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
md-5 = "0.10"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
digest_auth = "0.3"
